--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+package-lock.json
+.firebase/hosting.YnVpbGQ.cache
+
 # dependencies
 /node_modules
 /.pnp
@@ -21,3 +24,8 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+
+# webstorm
+/.idea
+node_modules
