--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@reach/router": "^1.2.1",
     "bootstrap": "^4.2.1",
     "firebase": "^5.8.1",
+    "google-maps-react": "^2.0.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-firebaseui": "^3.1.2",
