--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "firebase": "^5.8.1",
     "google-maps-react": "^2.0.2",
     "react": "^16.8.6",
+    "react-async-script-loader": "^0.3.0",
     "react-dom": "^16.8.6",
     "react-firebaseui": "^3.1.2",
     "react-scripts": "3.0.0",
